--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("images/backgroud.png");
+  background-image: url("/images/backgroud.png");
   background-size: cover;
   background-position: center;
   transform: scaleY(-1);
